Browse by state

--- a/views/browse.html
+++ b/views/browse.html
@@ -4,22 +4,22 @@
 		<!-- Browse by -->
 		<div id="browse-by" class="btn-group" data-toggle="buttons">
   			<label class="btn btn-primary active">
-			    <input type="radio" checked> Browse by name
+			    <input type="radio" checked onfocus="toggleBrowse();"> Browse by name
 			</label>
 			<label class="btn btn-primary">
-				<input type="radio"> Browse by state
+				<input type="radio" onfocus="toggleBrowse();"> Browse by state
 		  	</label>
 		</div>
 	</div>
-	<div class="filters">
+	<div id="name" class="filters">
 		<!-- State -->
 		<div class="btn-group">
-			<input type="hidden" name="state" value="0" />
+			<input type="hidden" name="state" value="-1" />
 		  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 		     	All states <span class="caret"></span>
 		  	</button>
 		  	<ul class="dropdown-menu" reversed>
-		  		<li><a>All states</a><input type="hidden" value="0" /></li>
+		  		<li><a>All states</a><input type="hidden" value="-1" /></li>
 				<li><a>Alabama</a><input type="hidden" value="1" /></li>
 				<li><a>Alaska</a><input type="hidden" value="2" /></li>
 				<li><a>Arizona</a><input type="hidden" value="4" /></li>
@@ -75,27 +75,27 @@
 		</div>
 		<!-- In State Tuition -->
 		<div class="btn-group">
-			<input type="hidden" name="in-state-tuition" value="0" />
+			<input type="hidden" name="in-state-tuition" value="-1" />
 		  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 		    	All in-state tuitions <span class="caret"></span>
 		  	</button>
 		  	<ul class="dropdown-menu">
-		  		<li><a>All in-state tuitions</a><input type="hidden" value="0" /></li>
+		  		<li><a>All in-state tuitions</a><input type="hidden" value="-1" /></li>
 		  		<li><a>$40,000+ in-state tuition</a><input type="hidden" value="40" /></li>
 		  		<li><a>$30,000 - $39,999 in-state tuition</a><input type="hidden" value="30" /></li>
 		  		<li><a>$20,000 - $29,999 in-state tuition</a><input type="hidden" value="20" /></li>
 		  		<li><a>$10,000 - $19,999 in-state tuition</a><input type="hidden" value="10" /></li>
-		  		<li><a>$0 - $9999 in-state tuition</a><input type="hidden" value="" /></li>
+		  		<li><a>$0 - $9999 in-state tuition</a><input type="hidden" value="0" /></li>
 		  	</ul>
 		</div>
 		<!-- Out of State Tuition -->
 		<div class="btn-group">
-			<input type="hidden" name="out-of-state-tuition" value="0" />
+			<input type="hidden" name="out-of-state-tuition" value="-1" />
 		  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 		    	All out-of-state tuitions <span class="caret"></span>
 		  	</button>
 		  	<ul class="dropdown-menu">
-		  		<li><a>All out-of-state tuitions</a><input type="hidden" value="0" /></li>
+		  		<li><a>All out-of-state tuitions</a><input type="hidden" value="-1" /></li>
 		  		<li><a>$40,000+ out-of-state tuition</a><input type="hidden" value="40" /></li>
 		  		<li><a>$30,000 - $39,999 out-of-state tuition</a><input type="hidden" value="30" /></li>
 		  		<li><a>$20,000 - $29,999 out-of-state tuition</a><input type="hidden" value="20" /></li>
@@ -105,12 +105,12 @@
 		</div>
 		<!-- Average Salary -->
 		<div class="btn-group">
-			<input type="hidden" name="average-salary" value="0" />
+			<input type="hidden" name="average-salary" value="-1" />
 			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 		    	All average incomes <span class="caret"></span>
 		  	</button>
 		  	<ul class="dropdown-menu">
-		  		<li><a>All average incomes</a><input type="hidden" value="0" /></li>
+		  		<li><a>All average incomes</a><input type="hidden" value="-1" /></li>
 		  		<li><a>$50,000+ average income</a><input type="hidden" value="50" /></li>
 		  		<li><a>$40,000 - $49,999 average income</a><input type="hidden" value="40" /></li>
 		  		<li><a>$30,000 - $39,999 average income</a><input type="hidden" value="30" /></li>
@@ -137,12 +137,12 @@
 		</div>
 		<!-- Limit to -->
 		<div class="btn-group">
-			<input type="hidden" name="limit" value="0" />
+			<input type="hidden" name="limit" value="-1" />
 		  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 		    	No limit <span class="caret"></span>
 		  	</button>
 		  	<ul class="dropdown-menu">
-		  		<li><a>No limit</a><input type="hidden" value="0" /></li>
+		  		<li><a>No limit</a><input type="hidden" value="-1" /></li>
 		  		<li><a>Limit to 5</a><input type="hidden" value="5" /></li>
 		  		<li><a>Limit to 10</a><input type="hidden" value="10" /></li>
 		  		<li><a>Limit to 25</a><input type="hidden" value="25" /></li>
@@ -156,8 +156,103 @@
 		  	Submit
 		</button>
 	</div>
+	<div id="state" class="filters" style="display:none;">
+		<!-- State -->
+		<div class="btn-group">
+			<input type="hidden" name="state-state" value="-1" />
+		  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+		     	All states <span class="caret"></span>
+		  	</button>
+		  	<ul class="dropdown-menu" reversed>
+		  		<li><a>All states</a><input type="hidden" value="-1" /></li>
+				<li><a>Alabama</a><input type="hidden" value="1" /></li>
+				<li><a>Alaska</a><input type="hidden" value="2" /></li>
+				<li><a>Arizona</a><input type="hidden" value="4" /></li>
+				<li><a>Arkansas</a><input type="hidden" value="5" /></li>
+				<li><a>California</a><input type="hidden" value="6" /></li>
+				<li><a>Colorado</a><input type="hidden" value="8" /></li>
+				<li><a>Connecticut</a><input type="hidden" value="9" /></li>
+				<li><a>Delaware</a><input type="hidden" value="10" /></li>
+				<li><a>District of Columbia</a><input type="hidden" value="11" /></li>
+				<li><a>Florida</a><input type="hidden" value="12" /></li>
+				<li><a>Georgia</a><input type="hidden" value="13" /></li>
+				<li><a>Hawaii</a><input type="hidden" value="15" /></li>
+				<li><a>Idaho</a><input type="hidden" value="16" /></li>
+				<li><a>Illinois</a><input type="hidden" value="17" /></li>
+				<li><a>Indiana</a><input type="hidden" value="18" /></li>
+				<li><a>Iowa</a><input type="hidden" value="19" /></li>
+				<li><a>Kansas</a><input type="hidden" value="20" /></li>
+				<li><a>Kentucky</a><input type="hidden" value="21" /></li>
+				<li><a>Louisiana</a><input type="hidden" value="22" /></li>
+				<li><a>Maine</a><input type="hidden" value="23" /></li>
+				<li><a>Maryland</a><input type="hidden" value="24" /></li>
+				<li><a>Massachusetts</a><input type="hidden" value="25" /></li>
+				<li><a>Michigan</a><input type="hidden" value="26" /></li>
+				<li><a>Minnesota</a><input type="hidden" value="27" /></li>
+				<li><a>Mississippi</a><input type="hidden" value="28" /></li>
+				<li><a>Missouri</a><input type="hidden" value="29" /></li>
+				<li><a>Montana</a><input type="hidden" value="30" /></li>
+				<li><a>Nebraska</a><input type="hidden" value="31" /></li>
+				<li><a>Nevada</a><input type="hidden" value="32" /></li>
+				<li><a>New Hampshire</a><input type="hidden" value="33" /></li>
+				<li><a>New Jersey</a><input type="hidden" value="34" /></li>
+				<li><a>New Mexico</a><input type="hidden" value="35" /></li>
+				<li><a>New York</a><input type="hidden" value="36" /></li>
+				<li><a>North Carolina</a><input type="hidden" value="37" /></li>
+				<li><a>North Dakota</a><input type="hidden" value="38" /></li>
+				<li><a>Ohio</a><input type="hidden" value="39" /></li>
+				<li><a>Oklahoma</a><input type="hidden" value="40" /></li>
+				<li><a>Oregon</a><input type="hidden" value="41" /></li>
+				<li><a>Pennsylvania</a><input type="hidden" value="42" /></li>
+				<li><a>Rhode Island</a><input type="hidden" value="44" /></li>
+				<li><a>South Carolina</a><input type="hidden" value="37" /></li>
+				<li><a>South Dakota</a><input type="hidden" value="46" /></li>
+				<li><a>Tennessee</a><input type="hidden" value="47" /></li>
+				<li><a>Texas</a><input type="hidden" value="48" /></li>
+				<li><a>Utah</a><input type="hidden" value="49" /></li>
+				<li><a>Vermont</a><input type="hidden" value="50" /></li>
+				<li><a>Virginia</a><input type="hidden" value="51" /></li>
+				<li><a>Washington</a><input type="hidden" value="53" /></li>
+				<li><a>West Virginia</a><input type="hidden" value="54" /></li>
+				<li><a>Wisconsin</a><input type="hidden" value="55" /></li>
+				<li><a>Wyoming</a><input type="hidden" value="56" /></li>
+		  	</ul>
+		</div>
+		<!-- Sort by -->
+		<div class="btn-group">
+			<input type="hidden" name="state-sort-by" value="1" />
+		  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+		    	Sort by state <span class="caret"></span>
+		  	</button>
+		 	<ul class="dropdown-menu">
+		 		<li><a>Sort by state</a><input type="hidden" value="1" /></li>
+		  		<li><a>Sort by score</a><input type="hidden" value="2" /></li>
+		  		<li><a>Sort by average school score</a><input type="hidden" value="3" /></li>
+		  		<li><a>Sort by in-state tuition</a><input type="hidden" value="in_state_tuition" /></li>
+		  		<li><a>Sort by out-of-state tuition</a><input type="hidden" value="out_of_state_tuition" /></li>
+		  		<li><a>Sort by average income</a><input type="hidden" value="6" /></li>
+		  	</ul>
+		</div>
+		<!-- Limit to -->
+		<div class="btn-group">
+			<input type="hidden" name="state-limit" value="-1" />
+		  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+		    	No limit <span class="caret"></span>
+		  	</button>
+		  	<ul class="dropdown-menu">
+		  		<li><a>No limit</a><input type="hidden" value="-1" /></li>
+		  		<li><a>Limit to 5</a><input type="hidden" value="5" /></li>
+		  		<li><a>Limit to 10</a><input type="hidden" value="10" /></li>
+		  		<li><a>Limit to 25</a><input type="hidden" value="25" /></li>
+		  	</ul>
+		</div>
+
+		<button type="button" class="btn btn-primary" onclick="browse();">
+		  	Submit
+		</button>
+	</div>
 	<div class="table-container">
-		<table class="table">
+		<table id="name-table" class="table">
 		  <thead class="thead-default text-center" align="center">
 		    <tr>
 		      <th>School</th>
@@ -167,6 +262,20 @@
 		      <th>In-state tuition</th>
 		      <th>Out-of-state tuition</th>
 		      <th>Average Income</th>
+		    </tr>
+		  </thead>
+		  <tbody class="browse-table-body">
+		  </tbody>
+		</table>
+		<table id="state-table" class="table" style="display:none;">
+		  <thead class="thead-default text-center" align="center">
+		    <tr>
+		      <th>State</th>
+		      <th>Location score</th>
+		      <th>Average school score</th>
+		      <th>Average in-state tuition</th>
+		      <th>Average out-of-state tuition</th>
+		      <th>Average state income</th>
 		    </tr>
 		  </thead>
 		  <tbody class="browse-table-body">
