--- a/views/browse.html
+++ b/views/browse.html
@@ -226,7 +226,7 @@
 		  	</button>
 		 	<ul class="dropdown-menu">
 		 		<li><a>Sort by state</a><input type="hidden" value="1" /></li>
-		  		<li><a>Sort by score</a><input type="hidden" value="2" /></li>
+		  		<li><a>Sort by location score</a><input type="hidden" value="2" /></li>
 		  		<li><a>Sort by average school score</a><input type="hidden" value="3" /></li>
 		  		<li><a>Sort by in-state tuition</a><input type="hidden" value="in_state_tuition" /></li>
 		  		<li><a>Sort by out-of-state tuition</a><input type="hidden" value="out_of_state_tuition" /></li>
