Small bug fixes

--- a/views/browse.html
+++ b/views/browse.html
@@ -228,8 +228,8 @@
 		 		<li><a>Sort by state</a><input type="hidden" value="1" /></li>
 		  		<li><a>Sort by location score</a><input type="hidden" value="2" /></li>
 		  		<li><a>Sort by average school score</a><input type="hidden" value="3" /></li>
-		  		<li><a>Sort by in-state tuition</a><input type="hidden" value="in_state_tuition" /></li>
-		  		<li><a>Sort by out-of-state tuition</a><input type="hidden" value="out_of_state_tuition" /></li>
+		  		<li><a>Sort by in-state tuition</a><input type="hidden" value="4" /></li>
+		  		<li><a>Sort by out-of-state tuition</a><input type="hidden" value="5" /></li>
 		  		<li><a>Sort by average income</a><input type="hidden" value="6" /></li>
 		  	</ul>
 		</div>
