--- a/views/browse.html
+++ b/views/browse.html
@@ -81,11 +81,11 @@
 		  	</button>
 		  	<ul class="dropdown-menu">
 		  		<li><a>All in-state tuitions</a><input type="hidden" value="-1" /></li>
-		  		<li><a>$40,000+ in-state tuition</a><input type="hidden" value="40" /></li>
-		  		<li><a>$30,000 - $39,999 in-state tuition</a><input type="hidden" value="30" /></li>
-		  		<li><a>$20,000 - $29,999 in-state tuition</a><input type="hidden" value="20" /></li>
-		  		<li><a>$10,000 - $19,999 in-state tuition</a><input type="hidden" value="10" /></li>
-		  		<li><a>$0 - $9999 in-state tuition</a><input type="hidden" value="0" /></li>
+		  		<li><a>At most $50,000 in-state tuition</a><input type="hidden" value="50" /></li>
+		  		<li><a>At most $40,000 in-state tuition</a><input type="hidden" value="40" /></li>
+		  		<li><a>At most $30,000 in-state tuition</a><input type="hidden" value="30" /></li>
+		  		<li><a>At most $20,000 in-state tuition</a><input type="hidden" value="20" /></li>
+		  		<li><a>At most $10,000 in-state tuition</a><input type="hidden" value="10" /></li>
 		  	</ul>
 		</div>
 		<!-- Out of State Tuition -->
@@ -96,11 +96,11 @@
 		  	</button>
 		  	<ul class="dropdown-menu">
 		  		<li><a>All out-of-state tuitions</a><input type="hidden" value="-1" /></li>
-		  		<li><a>$40,000+ out-of-state tuition</a><input type="hidden" value="40" /></li>
-		  		<li><a>$30,000 - $39,999 out-of-state tuition</a><input type="hidden" value="30" /></li>
-		  		<li><a>$20,000 - $29,999 out-of-state tuition</a><input type="hidden" value="20" /></li>
-		  		<li><a>$10,000 - $19,999 out-of-state tuition</a><input type="hidden" value="10" /></li>
-		  		<li><a>$0 - $9999 out-of-state tuition</a><input type="hidden" value="0" /></li>
+		  		<li><a>At most $50,000 out-of-state tuition</a><input type="hidden" value="50" /></li>
+		  		<li><a>At most $40,000 out-of-state tuition</a><input type="hidden" value="40" /></li>
+		  		<li><a>At most $30,000 out-of-state tuition</a><input type="hidden" value="30" /></li>
+		  		<li><a>At most $20,000 out-of-state tuition</a><input type="hidden" value="20" /></li>
+		  		<li><a>At most $10,000 out-of-state tuition</a><input type="hidden" value="10" /></li>
 		  	</ul>
 		</div>
 		<!-- Average Salary -->
@@ -112,11 +112,10 @@
 		  	<ul class="dropdown-menu">
 		  		<li><a>All average incomes</a><input type="hidden" value="-1" /></li>
 		  		<li><a>$50,000+ average income</a><input type="hidden" value="50" /></li>
-		  		<li><a>$40,000 - $49,999 average income</a><input type="hidden" value="40" /></li>
-		  		<li><a>$30,000 - $39,999 average income</a><input type="hidden" value="30" /></li>
-		  		<li><a>$20,000 - $29,999 average income</a><input type="hidden" value="20" /></li>
-		  		<li><a>$10,000 - $19,999 average income</a><input type="hidden" value="10" /></li>
-		  		<li><a>$0 - $9,999 average income</a><input type="hidden" value="0" /></li>
+		  		<li><a>$40,000+ average income</a><input type="hidden" value="40" /></li>
+		  		<li><a>$30,000+ average income</a><input type="hidden" value="30" /></li>
+		  		<li><a>$20,000+ average income</a><input type="hidden" value="20" /></li>
+		  		<li><a>$10,000+ average income</a><input type="hidden" value="10" /></li>
 		  	</ul>
 		</div>
 		<!-- Sort by -->
