Small style change

--- a/css/site.css
+++ b/css/site.css
@@ -12,6 +12,10 @@ body {
     overflow: scroll;
 }
 
+.sort-by a, .sort-by button {
+    font-weight: bold !important;
+}
+
 .compare {
     display: inline;
 }
