--- a/views/browse.html
+++ b/views/browse.html
@@ -119,7 +119,7 @@
 		  	</ul>
 		</div>
 		<!-- Sort by -->
-		<div class="btn-group">
+		<div class="btn-group sort-by">
 			<input type="hidden" name="sort-by" value="name" />
 		  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 		    	Sort by name <span class="caret"></span>
@@ -218,7 +218,7 @@
 		  	</ul>
 		</div>
 		<!-- Sort by -->
-		<div class="btn-group">
+		<div class="btn-group sort-by">
 			<input type="hidden" name="state-sort-by" value="1" />
 		  	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
 		    	Sort by state <span class="caret"></span>
